[gd_scene load_steps=13 format=3 uid="uid://jfkrv7mtlj0n"]

[ext_resource type="PackedScene" uid="uid://cw0vbavf55kfi" path="res://tile_map.tscn" id="1_8wrb1"]
[ext_resource type="Script" path="res://world.gd" id="1_weewu"]
[ext_resource type="PackedScene" uid="uid://b0d5xty6ahvuq" path="res://hecatia.tscn" id="1_y1j8v"]
[ext_resource type="PackedScene" uid="uid://dgxvmmkwegg1" path="res://hec_camera.tscn" id="2_o5fc7"]
[ext_resource type="PackedScene" uid="uid://bu2k1tfyu08wq" path="res://oob_indicator.tscn" id="4_r7hkj"]
[ext_resource type="Texture2D" uid="uid://bsbmpo1frwpey" path="res://hellface.png" id="5_aar54"]
[ext_resource type="Texture2D" uid="uid://yfkyv21mqb3w" path="res://earthface.png" id="6_idyuy"]
[ext_resource type="Texture2D" uid="uid://8jeik4yd7yjf" path="res://moonface.png" id="7_p0o81"]
[ext_resource type="PackedScene" uid="uid://d2ornjltc3aa8" path="res://stair.tscn" id="8_mynda"]
[ext_resource type="PackedScene" uid="uid://kc4ajuukcdcd" path="res://floor_tile_map.tscn" id="10_wdlqh"]
[ext_resource type="PackedScene" uid="uid://b17n4m3n6jv0m" path="res://spawn_point.tscn" id="11_mwoog"]
[ext_resource type="PackedScene" uid="uid://cnnxenb02x3p5" path="res://fairy_spawner.tscn" id="12_77jte"]

[node name="world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_weewu")

[node name="hecCamera" parent="." instance=ExtResource("2_o5fc7")]
y_sort_enabled = true

[node name="hecatia1" parent="hecCamera" instance=ExtResource("1_y1j8v")]
process_mode = 1
position = Vector2(56, 120)

[node name="hecatia2" parent="hecCamera" instance=ExtResource("1_y1j8v")]
position = Vector2(72, 120)
hectype = 1

[node name="hecatia3" parent="hecCamera" instance=ExtResource("1_y1j8v")]
position = Vector2(88, 120)
hectype = 2

[node name="FloorTileMap" parent="." instance=ExtResource("10_wdlqh")]
layer_0/tile_data = PackedInt32Array(1310723, 65538, 2, 1245187, 65538, 0, 1245188, 393218, 2, 1179652, 2, 0, 1245185, 65538, 0, 1245186, 65538, 0, 1310722, 65538, 2, 1310721, 65538, 2, 1310720, 65538, 2, 1310724, 65538, 2, 1245189, 65538, 1, 1179653, 393218, 2, 1114117, 2, 1, 1114114, 131074, 2, 1114113, 65538, 2, 1114112, 65538, 2, 1310725, 65538, 2, 1245190, 65538, 1, 1245191, 65538, 1, 1245192, 131074, 1, 1245196, 2, 0, 1310732, 393218, 3, 1310731, 65538, 3, 1310730, 65538, 3, 1310729, 65538, 3, 1310728, 327682, 3, 1310727, 65538, 2, 1310726, 65538, 2, 1114118, 65538, 1, 1114119, 65538, 1, 1114120, 131074, 1, 1179656, 131074, 1, 1179654, 65538, 1, 1179655, 65538, 1, 1179661, 2, 1, 1048589, 393218, 1, 1048588, 65538, 2, 1048587, 65538, 2, 1048586, 65538, 2, 1245183, 196610, 1, 1179647, 262146, 1, 1048576, 65538, 1, 1048577, 65538, 1, 1048578, 327682, 1, 1048579, 65538, 2, 1048580, 65538, 2, 1048581, 393218, 1, 983044, 65538, 1, 983043, 65538, 1, 983042, 65538, 1, 1048582, 65538, 1, 1048583, 65538, 1, 1048584, 327682, 1, 1048585, 65538, 2, 983053, 65538, 1, 983052, 65538, 1, 983051, 65538, 1, 983050, 65538, 1, 983049, 65538, 1, 983048, 65538, 1, 983047, 65538, 1, 983046, 65538, 1, 983045, 65538, 1, 917506, 65538, 1, 917507, 65538, 1, 917508, 65538, 1, 917509, 65538, 1, 917510, 65538, 1, 917511, 65538, 1, 917512, 65538, 1, 917513, 65538, 1, 917514, 65538, 1, 917515, 65538, 1, 983041, 65538, 1, 917505, 65538, 1, 851970, 65538, 1, 851971, 65538, 1, 851972, 65538, 1, 851973, 65538, 1, 851974, 65538, 1, 851975, 65538, 1, 851976, 65538, 1, 851977, 65538, 1, 851978, 65538, 1, 851979, 65538, 1, 851980, 65538, 1, 917516, 65538, 1, 917517, 65538, 1, 851981, 65538, 1, 786445, 65538, 1, 786444, 65538, 1, 786443, 65538, 1, 786442, 65538, 1, 786441, 65538, 1, 851969, 65538, 1, 786433, 65538, 1, 786434, 65538, 1, 786435, 65538, 1, 786436, 65538, 1, 786437, 65538, 1, 720898, 65538, 1, 720897, 65538, 1, 720896, 65538, 1, 655360, 65538, 1, 589824, 65538, 1, 524288, 65538, 1, 589823, 2, 1, 524287, 2, 1, 458751, 2, 1, 393216, 65538, 1, 327680, 65538, 1, 262144, 65538, 1, 458752, 65538, 1, 720899, 65538, 1, 720900, 65538, 1, 720901, 65538, 1, 786438, 65538, 1, 786439, 65538, 1, 786440, 65538, 1, 720907, 65538, 1, 720908, 65538, 1, 720909, 65538, 1, 720910, 65538, 1, 720911, 65538, 1, 655375, 65538, 1, 655374, 65538, 1, 655373, 65538, 1, 655372, 65538, 1, 720906, 65538, 1, 720905, 65538, 1, 720904, 65538, 1, 720903, 65538, 1, 720902, 65538, 1, 655362, 65538, 1, 655361, 65538, 1, 655371, 65538, 1, 655370, 65538, 1, 655369, 65538, 1, 655368, 65538, 1, 655367, 65538, 1, 655366, 65538, 1, 655365, 65538, 1, 655364, 65538, 1, 655363, 65538, 1, 196608, 65538, 0, 196609, 65538, 0, 196610, 65538, 0, 196611, 65538, 0, 196612, 65538, 0, 196613, 65538, 0, 196614, 65538, 0, 196615, 65538, 0, 196616, 65538, 0, 196617, 65538, 0, 196618, 65538, 0, 196619, 65538, 0, 196620, 65538, 0, 262156, 65538, 1, 262155, 65538, 1, 262154, 65538, 1, 262153, 65538, 1, 262152, 65538, 1, 262151, 65538, 1, 262150, 65538, 1, 262149, 65538, 1, 262148, 65538, 1, 262147, 65538, 1, 262146, 65538, 1, 262145, 65538, 1, 327681, 65538, 1, 393217, 65538, 1, 458753, 65538, 1, 524289, 65538, 1, 589825, 65538, 1, 589826, 65538, 1, 524290, 65538, 1, 458754, 65538, 1, 393218, 65538, 1, 327682, 65538, 1, 327683, 65538, 1, 327684, 65538, 1, 458756, 65538, 1, 458755, 65538, 1, 524291, 65538, 1, 589827, 65538, 1, 589828, 65538, 1, 524292, 65538, 1, 393219, 65538, 1, 327685, 65538, 1, 458757, 65538, 1, 524293, 65538, 1, 589829, 65538, 1, 589830, 65538, 1, 327686, 65538, 1, 393222, 65538, 1, 458758, 65538, 1, 524294, 65538, 1, 589831, 65538, 1, 327687, 65538, 1, 393223, 65538, 1, 458759, 65538, 1, 524295, 65538, 1, 589832, 65538, 1, 524296, 65538, 1, 458760, 65538, 1, 393224, 65538, 1, 327688, 65538, 1, 327689, 65538, 1, 393225, 65538, 1, 458761, 65538, 1, 524297, 65538, 1, 589833, 65538, 1, 589834, 65538, 1, 524298, 65538, 1, 458762, 65538, 1, 393226, 65538, 1, 327690, 65538, 1, 327691, 65538, 1, 393227, 65538, 1, 393228, 65538, 1, 458764, 65538, 1, 524300, 65538, 1, 589836, 65538, 1, 589835, 65538, 1, 524299, 65538, 1, 458763, 65538, 1, 589837, 65538, 1, 589838, 65538, 1, 589839, 327682, 2, 524303, 131074, 1, 524302, 65538, 1, 524301, 65538, 1, 458765, 65538, 1, 393229, 65538, 1, 327692, 65538, 1, 196621, 65538, 0, 262157, 65538, 1, 327693, 65538, 1, 393230, 65538, 1, 458766, 65538, 1, 327694, 65538, 1, 262158, 65538, 1, 196622, 65538, 0, 196623, 131074, 0, 262159, 131074, 1, 327695, 131074, 1, 393231, 131074, 1, 458767, 131074, 1, 786447, 65538, 1, 786446, 65538, 1, 851982, 65538, 1, 917518, 65538, 1, 983054, 65538, 1, 1048590, 65538, 1, 1114126, 65538, 1, 1114125, 2, 1, 1245197, 393218, 2, 1245198, 327682, 1, 1179662, 65538, 1, 1048591, 131074, 1, 983055, 131074, 1, 917519, 131074, 1, 851983, 327682, 1, 1114127, 131074, 1, 1179663, 131074, 1, 1245199, 131074, 2, 1310734, 131074, 2, 1310733, 65538, 2, 983040, 65538, 1, 917504, 65538, 1, 851968, 65538, 1, 786432, 65538, 1, 655359, 2, 1, 720895, 2, 1, 786431, 2, 1, 851967, 2, 1, 917503, 2, 1, 983039, 2, 1, 1048575, 2, 1, 1114111, 2, 1, 720912, 131074, 1, 655376, 131074, 1, 589840, 131074, 0, 851984, 131074, 2, 786448, 131074, 1, 262143, 2, 0, 327679, 2, 1, 393215, 2, 1, 393221, 65538, 1, 1310719, 262146, 2, 1245184, 65538, 0, 1376255, 2, 2, 393220, 65538, 1)

[node name="TileMap" parent="." instance=ExtResource("1_8wrb1")]
layer_0/tile_data = PackedInt32Array(196620, 131072, 0, 262157, 131072, 0, 327693, 131072, 2, 327692, 0, 2, 262156, 589824, 0, 262155, 0, 2, 196619, 393216, 0, 786442, 65536, 3, 786443, 65536, 3, 196618, 65536, 3, 1179660, 458753, 3, 1179659, 327681, 0, 1179658, 327681, 2, 1179657, 1, 1, 1114112, 2, 2, 720896, 262144, 3, 655360, 196608, 1, 589824, 196608, 1, 524288, 196608, 1, 458752, 196608, 1, 393216, 196608, 1, 327680, 196608, 1, 262144, 196608, 0, 1179648, 1, 3, 1179649, 65537, 3, 1179650, 65537, 3, 1179651, 458753, 3, 720911, 458752, 3, 655375, 196608, 0, 720910, 65536, 3, 1114125, 131073, 3, 720909, 65536, 3, 1114124, 262145, 0, 786444, 458752, 3, 720908, 262144, 0, 1114123, 196610, 3, 1114122, 131073, 0, 1114121, 1, 0, 196617, 65536, 3, 196616, 65536, 3, 196615, 65536, 3, 196614, 65536, 3, 196613, 65536, 3, 1114116, 131073, 3, 196612, 65536, 3, 1114115, 262145, 0, 196611, 65536, 3, 1114114, 131074, 2, 196610, 65536, 3, 1114113, 65538, 2, 720897, 65536, 3, 196609, 0, 3, 1245193, 1, 2, 1245195, 131073, 2, 1245194, 65537, 2, 720898, 65536, 3, 720899, 131072, 3, 786436, 0, 3, 786437, 65536, 3, 786438, 65536, 3, 786439, 65536, 3, 786440, 65536, 3, 786441, 65536, 3)

[node name="OOBindicator1" parent="." node_paths=PackedStringArray("track_object") instance=ExtResource("4_r7hkj")]
visible = false
position = Vector2(40, 152)
track_object = NodePath("../hecCamera/hecatia1")
sprite = ExtResource("5_aar54")

[node name="OOBindicator2" parent="." node_paths=PackedStringArray("track_object") instance=ExtResource("4_r7hkj")]
visible = false
position = Vector2(40, 152)
track_object = NodePath("../hecCamera/hecatia2")
sprite = ExtResource("6_idyuy")

[node name="OOBindicator3" parent="." node_paths=PackedStringArray("track_object") instance=ExtResource("4_r7hkj")]
visible = false
position = Vector2(40, 152)
track_object = NodePath("../hecCamera/hecatia3")
sprite = ExtResource("7_p0o81")

[node name="stair" parent="." instance=ExtResource("8_mynda")]
position = Vector2(72, 104)
toScene = "world0"

[node name="spawnPoint0" parent="." instance=ExtResource("11_mwoog")]
position = Vector2(72, 120)

[node name="fairySpawner0" parent="." instance=ExtResource("12_77jte")]
position = Vector2(184, 136)
layer_0/tile_data = PackedInt32Array(-65536, 65536, 1, -65535, 327680, 4, -131071, 131072, 0, 1, 131072, 2, -65534, 65536, 3, -1, 65536, 1, 65535, 65536, 2, 0, 65536, 2, -65533, 131072, 3, -131072, 65536, 0, 65534, 393216, 3, -2, 0, 1, -65537, 65536, 0, -65538, 0, 0, 65533, 262144, 0, 131069, 196608, 2)
